--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,15 +1,6 @@
 
+$mainGreen: #5F7161;
+$secondGreen: #6D8B74;
+$viaggioWheat: #EFEAD8;
+$viaggioGray: #D0C9C0;
 
-/*
-$screen-sm: 576px;
-$screen-md: 768px;
-$screen-lg: 992px;
-$screen-xl: 1200px;
-$screen-xxl: 1300px;
-$screen-full: 1400px;
-
-// Colors
-$textColor: #42474C;
-$textLight1Color: #6b7177;
-*/
-$textColor: #42474C;
