--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,3 +1,5 @@
+@import '../../sass/variables';
+
 .locations-container {
     display: flex;
     flex-wrap: wrap;
@@ -15,13 +17,26 @@
     box-shadow: 0 20px 40px -14px;
     background-color: #efefef;
 
+    &:hover {
+
+        .location__image {
+            transition: all .2s linear;
+            filter: contrast(100%);
+        }
+    }
+
     &__info {
         padding: 15px;
     }
 
 
     &__image {
-        height: 50%;
+        width: 100%;
+        height: 40%;
+        object-fit: cover;
+        filter: contrast(80%);
+        transition: all .2s linear;
+
     }
 
     &__name {
@@ -39,11 +54,20 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
 
-        a:active, a:visited {
-            color: inherit;
-            text-decoration: none;
+        &:hover {
+            background-color: $mainGreen;
+            transition: all .2s ease-out;
+            color: white;
 
         }
+        a:active, a:visited, a:-webkit-any-link {
+            text-decoration: none;
+            color: inherit;
+
+        }
+
+
     }
 }
