--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -1,10 +1,12 @@
 @import '../../sass/variables';
 
 .topbar {
-    background-color: $mainGreen;
-    color: white;
-
-
+    // background-color: $mainGreen;
+    color: black;
+    height: 50px;
+    border-bottom: 1px $viaggioGray solid;
+    display: flex;
+    justify-content: space-between;
     ul {
         display: flex;
         list-style-type: none;
