--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -1,9 +1,28 @@
 @import './variables';
 
+
+
+@font-face {
+    font-family: Montserrat;
+    src: url('../assets/fonts/Montserrat-VariableFont_wght.ttf');
+}
+@font-face {
+    font-family: Montserrat-bold;
+    src: url('../assets/fonts/Montserrat-Bold.ttf');
+}
+
+
+
 * {
     margin: 0px;
     padding: 0px;
+    font-family: Montserrat;
  }
+
+ a:active, a:visited, a:-webkit-any-link {
+    text-decoration: none;
+    color: inherit;
+}
 
 
 
