fix show location btn

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -17,6 +17,7 @@
     margin: 0px;
     padding: 0px;
     font-family: Montserrat;
+    text-decoration: none;
  }
 
  a:active, a:visited, a:-webkit-any-link {
