--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -47,6 +47,9 @@
         border: 1px solid rgb(231, 231, 231);
         box-shadow: 0 20px 40px -14px;
         background-color: #efefef;
+        position: relative;
+        display: flex;
+        flex-direction: column;
     
         &:hover {
     
@@ -58,6 +61,9 @@
     
         &__info {
             padding: 15px;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
         }
     
     
@@ -91,12 +97,19 @@
             align-items: center;
             cursor: pointer;
             transition: all .2s ease-out;
+            margin-top: auto;
+           
     
             &:hover {
                 background-color: $mainGreen;
                 transition: all .2s ease-out;
                 color: white;
     
+            }
+            a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
             a:active, a:visited, a:-webkit-any-link {
                 text-decoration: none;
