--- a/src/components/UI/BorderedButton/BorderedButton.scss
+++ b/src/components/UI/BorderedButton/BorderedButton.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Montserrat-bold;
+    font-family: $viaggioFontBold;
 
     &:hover {
         background-color: $mainGreen;
