--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,4 +3,6 @@ $mainGreen: #5F7161;
 $secondGreen: #6D8B74;
 $viaggioWheat: #EFEAD8;
 $viaggioGray: #D0C9C0;
+$viaggioFontBold: Montserrat-bold;
+$viaggioFontRegular: Montserrat-bold;
 
