--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,4 +5,5 @@ $viaggioWheat: #EFEAD8;
 $viaggioGray: #D0C9C0;
 $viaggioFontBold: Montserrat-bold;
 $viaggioFontRegular: Montserrat-bold;
+$viaggioFontItalic: Montserrat-italic;
 
