--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -10,6 +10,10 @@
     font-family: Montserrat-bold;
     src: url('../assets/fonts/Montserrat-Bold.ttf');
 }
+@font-face {
+    font-family: Montserrat-italic;
+    src: url('../assets/fonts/Montserrat-Italic-VariableFont_wght.ttf');
+}
 
 
 
