--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -1,18 +1,24 @@
 @import '../../sass/variables';
 
+
+.wrapper {
+
+    position: fixed;
+    top: 0;
+    z-index: 50;
+    width: 100%;
+}
+
 .topbar {
     // background-color: $mainGreen;
     color: black;
     height: 50px;
-    border-bottom: 1px $viaggioGray solid;
+    // border-bottom: 1px $viaggioGray solid;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 50;
-    background-color: white;
-    padding: 0 20px;
+    // background-color: white;
+    padding: 0 60px;
     
     &__items { 
         display: flex;
