--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -20,7 +20,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Montserrat;
+    font-family: $viaggioFontRegular;
     text-decoration: none;
  }
 
