--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,9 +1,7 @@
 
 $mainGreen: #25a434;
-$secondGreen: #6D8B74;
-$viaggioWheat: #EFEAD8;
-$viaggioGray: #D0C9C0;
+$viaggioGray: #c5c5c5;
 $viaggioFontBold: Montserrat-bold;
-$viaggioFontRegular: Montserrat-bold;
+$viaggioFontRegular: Montserrat;
 $viaggioFontItalic: Montserrat-italic;
 
