--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -6,6 +6,15 @@
     align-items: center;
     display: flex;
     
+    &__input-label {
+        margin-bottom: 3px;
+        font-size: 13px;
+
+    }
+    &__input-container {
+        margin-bottom: 10px;
+    }
+    
     
     &__description {
         background-image: url('../../assets/images/auth-bg.jpg');
@@ -18,7 +27,7 @@
     &__form {
         height: 100%;
         width: 50%;
-        background-color: white;
+        // background-color: whi;
         display: flex;
         flex-direction: column;
         align-items: center;
