--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -33,6 +33,13 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        transition: all 1s ease-out
+        transition: all 1s ease-out;
+
+        form {
+            width: 300px;
+        }
+    }
+    &__form-wrapper {
+        
     }
 }
