--- a/src/components/UI/Input/Input.scss
+++ b/src/components/UI/Input/Input.scss
@@ -4,7 +4,7 @@
 .input {
     border-radius: 20px;
     height: 30px;
-    width: 200px;
+    width: 100%;
     padding-left: 20px;
     background-color: inherit;
     // outline-color: $mainGreen;
