--- a/src/components/UI/Input/Input.scss
+++ b/src/components/UI/Input/Input.scss
@@ -11,7 +11,7 @@
     border-style: solid;
     outline: none;
     color: $viaggioGray;
-    border-color: $viaggioGray;
+    border-color: #e8e8e8;
     cursor: pointer;
     
     
