--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -22,6 +22,7 @@
     padding: 0px;
     font-family: $viaggioFontRegular;
     text-decoration: none;
+    box-sizing: border-box;
  }
 
  a:active, a:visited, a:-webkit-any-link {
