--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -6,9 +6,14 @@
     align-items: center;
     display: flex;
 
+    &__logo {
+        height: 100px;
+        margin-bottom: 30px;
+    }
+
     &__title {
         font-size: 27px;
-        // margin-bottom: 30px;
+        margin-bottom: 30px;
 
         font-family: $viaggioFontBold;
         span {
@@ -29,6 +34,7 @@
     &__input-label {
         margin-bottom: 3px;
         font-size: 13px;
+        padding-left: 10px;
 
     }
     &__input-container {
