--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -43,7 +43,7 @@
     
     
     &__description {
-        background-image: url('../../assets/images/auth-bg.jpg');
+        background-image: url('../../assets/images/auth-bg.png');
         height: 100%;
         width: 100%;
         background-size: cover;
