--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -23,6 +23,13 @@
     // font-family: $viaggioFontBold;
 
 
+    &__user {
+        height: 20px;
+        width: 20px;
+        background-color: white;
+        border-radius: 100%;
+    }
+
     &__logo {
         height: 60px;
     }
