--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -51,13 +51,21 @@
             padding: 0;
             margin: 0;
             border-radius: 10px;
+
+            li {
+                &:hover {
+                    color: $mainGreen;
+                }
+            }
             
             
             &--active {
                 opacity: 1;
                 transition: opacity 0.1s linear, top 0.1s linear;
                 top: calc(100% + 3px);
-                box-shadow: 0 2px 5px 0 black;
+                -webkit-box-shadow: -10px 10px 19px -2px rgba(0,0,0,0.75);
+                -moz-box-shadow: -10px 10px 19px -2px rgba(0,0,0,0.75);
+                box-shadow: -10px 10px 19px -2px rgba(0,0,0,0.75);
 
             }
         }
