--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -13,6 +13,7 @@
         background-image: url('../../assets//images//home-bg.png');
         background-size: cover;
         height: 450px;
+        width: 100vw;
         &__share {
             font-size: 20px;
             border-radius: 20px;
