--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -23,6 +23,14 @@
     transition: background-color 0.5s linear;
     // font-family: $viaggioFontBold;
 
+
+    &__username {
+        color: $mainGreen !important;
+        &:hover {
+            // color: $mainGreen !important;
+        }
+    }
+
     &__user {
         height: 38px;
         width: 38px;
@@ -59,6 +67,7 @@
 
             li {
                 width: fit-content;
+                margin-bottom: 15px;
                 transition: color 0.2s linear;
                 &:hover {
                     color: $mainGreen;
