--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -17,12 +17,16 @@
 
 
 
+* {
+
+    box-sizing: border-box;
+}
+
 body {
     margin: 0px;
     padding: 0px;
     font-family: $viaggioFontRegular;
     text-decoration: none;
-    box-sizing: border-box;
  }
 
  a:active, a:visited, a:-webkit-any-link {
