--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -10,6 +10,7 @@
         padding: 10px 20px;
         align-items: center;
         gap: 10px;
+        width: 100vw;
         background-image: url('../../assets//images//home-bg.png');
         background-size: cover;
         height: 450px;
